# game

./: .gitignore  GUIDELINES.md  PLAN.md  create_object_test_map.py  create_placeholder_sprites.py  create_sample_map.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.claude/: settings.local.json
.github/workflows/: test.yml
docs/: index.md
docs/api/: engine.md  entities.md  index.md  scenes.md  world.md
docs/design/: combat.md  enemies.md  environment.md  equipment.md  index.md  player.md  progression.md
game/engine/: game.py  scene.py  scene_manager.py
game/entities/: __init__.py  animated_entity.py  enemy.py  entity.py  player.py
game/equipment/: __init__.py  inventory.py  weapon.py
game/graphics/: __init__.py  animation.py  sprite_manager.py  sprite_sheet.py
game/scenes/: game_scene.py
game/systems/: __init__.py  sound_manager.py
game/ui/: __init__.py  config_menu.py  controls_menu.py  equipment_menu.py  inventory_menu.py  main_menu.py  menu.py
game/world/: bitmap_map.py  chest.py  game_object.py  loot.py  object_types.py  tile_types.py
scripts/: create_large_map.py  create_placeholder_character_sprites.py  gen_sprites.py  generate_chest_sprites.py  generate_docs.py  generate_game_sprites.py  generate_goblin_death_sprites.py  generate_goblin_forward_death_sprites.py  generate_goblin_sprites.py  generate_heroic_music.py  generate_ogre_sprites.py
tests/functional/: test_game_scenarios.py
tests/unittest/: test_animated_entity.py  test_bitmap_map.py  test_bitmap_map_render.py  test_chest_system.py  test_enemy_system.py  (+11 more)
(+7 files in other folders)
